--- a/resources/css/tylerstyle.css
+++ b/resources/css/tylerstyle.css
@@ -11,7 +11,7 @@ html, body {
     padding: 0;
     margin: 0;
 
-    font-family: "inconsolata", "Courier New", Courier, monospace;
+    font-family: inconsolata, "Courier New", Courier, monospace;
 }
 
 .sheen {
